# fx-ai

./: .env.example  .gitignore  DASHBOARD_GUIDE.md  Dockerfile  FEATURES_ADDED.md  Makefile  NEWS_SOURCES_ADDED.md  PORT_CHANGE.md  README.md  TESTING_SUMMARY.md  TEST_CHECKLIST.md  pyproject.toml
apps/api/: main.py
apps/backtest/: quick_check.py
apps/common/: clickhouse_client.py  schemas.py  validators.py
apps/features/: featurize.py  labels.py
apps/ingestion/: demo_ingest.py  macro_loader.py
apps/llm/: __init__.py  client.py  fusion.py  news_aggregator.py  ollama_client.py
apps/models/: baselines.py  loader.py
apps/news/: __init__.py  advanced_sources.py  sources.py
apps/train/: train_lgbm.py
apps/workers/: alerter_daemon.py  backtest_daemon.py  featurizer_daemon.py  news_ingester.py
config/: impact_map.yaml  policy_v1.1.yaml
dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.js
dashboard/src/: App.jsx  index.css
docs/: ADVANCED_NEWS_SOURCES.md  END_TO_END_TESTING.md  HYBRID_QUICKSTART.md  HYBRID_SYSTEM_COMPLETE.md  LLM_Integration_Design.md  LLM_PROVIDER_COMPARISON.md  NEWS_INGESTION_GUIDE.md  NEWS_SOURCES_SUMMARY.md  OLLAMA_SETUP.md  PRD.md  TESTING_FLOW_DIAGRAM.md  TESTING_GUIDE.md
infra/sql/: init.sql  (+1 more)
scripts/: backfill_historical_data.py  generate_all_features.sh  insert_sample_news.py  quick_status.sh  quick_test_hybrid.sh  run_e2e_test.sh  setup_ollama.sh  test_hybrid_api.py  test_news_ingestion.py  test_news_sources.py  test_ollama.py  train_all_pairs.sh
tests/: .env.example  .pre-commit-config.yaml
(+6 files in other folders)
